2019-04-17 Magnus Hagdorn
 * piccolo3/client/Piccolo.py: add method to start autointegration
 * piccolo3/client/PiccoloSpectrometer.py: add methods to handle
   autointegration status
 * setup.py: require correct package

2019-03-29 Magnus Hagdorn
 * piccolo3/client/PiccoloDataDir.py: add methods to get list of runs; list of
   spectra and to get spectra

2019-03-27 Magnus Hagdorn
 * piccolo3/client/PiccoloDataDir.py: fix bug

2019-03-27 Magnus Hagdorn
 * piccolo3/client/Piccolo.py: observe changes of status
 * piccolo3/client/__init__.py: gather all piccolo client objects into a
   single object

2019-03-26 Magnus Hagdorn
 * piccolo3/client/PiccoloSpectrometer.py: expose list of spectrometers and
 channels; add callback to get notifications when a value changed
 * piccolo3/client/PiccoloSysinfo.py: tidy up

2019-03-25 Magnus Hagdorn
 * piccolo3/client/PiccoloBaseClient.py: use singleton class to manage client
   context
 * piccolo3/client/PiccoloDataDir.py: fix bug; report data directory
 * piccolo3/client/PiccoloSysinfo.py: report server version; cache server
   hostname
 * piccolo3/client/__init__.py: fix package name

2019-03-22 Magnus Hgadorn
 * piccolo3/client/__init__.py: make it a package

2019-03-22 Magnus Hagdorn
 * piccolo3/client/Piccolo.py: make interface async
 * piccolo3/client/PiccoloSpectrometer.py: ditto
 * piccolo3/client/PiccoloSysinfo.py: ditto

2019-03-22 Magnus Hagdorn 
 * piccolo3/client/PiccoloBaseClient.py: add async method to observe a
   resource
 * piccolo3/client/PiccoloDataDir.py: add classes to handle data directory

2019-03-21 Magnus Hagdorn
 * piccolo3/client/PiccoloSysinfo.py: wrap sysinfo class

2019-03-21 Magnus Hagdorn
 * piccolo3/client/Piccolo.py: add client object to handle piccolo

2019-03-07 Magnus Hagdorn
 * start piccolo3 client using aiocoap