@@ -1,3 +1,10 @@
+2019-04-22 Magnus Hagdorn
+ * piccolo3/client/Piccolo.py: add extra keyword arguments to schedule a
+   sequence run
+ * setup.py: install new script
+ * piccolo3/precord.py: add script to run piccolo sequences from the command
+   line
+
 2019-04-17 Magnus Hagdorn
  * piccolo3/client/Piccolo.py: add method to start autointegration
  * piccolo3/client/PiccoloSpectrometer.py: add methods to handle
